--- a/ShopFlowers/flowers/templates/pots.html
+++ b/ShopFlowers/flowers/templates/pots.html
@@ -124,6 +124,6 @@
     </nav>
 </section>
 
-<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.6.1.min.js"></script>
 <script src="{% static 'js/flowers.js' %}"></script>
 {% endblock base_content %}
