--- a/ShopFlowers/cart/templates/cart.html
+++ b/ShopFlowers/cart/templates/cart.html
@@ -101,6 +101,6 @@
 </section>
 
 
-<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.6.1.min.js"></script>
 <script src="{% static 'js/cart.js' %}"></script>
 {% endblock base_content %}
