--- a/ShopFlowers/feedback/templates/edit_feedback.html
+++ b/ShopFlowers/feedback/templates/edit_feedback.html
@@ -67,6 +67,6 @@
 </section>
 
 
-<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.6.1.min.js"></script>
 <script src="{% static 'js/feedback.js' %}"></script>
 {% endblock base_content %}
