--- a/ShopFlowers/feedback/templates/profile_feedback.html
+++ b/ShopFlowers/feedback/templates/profile_feedback.html
@@ -19,7 +19,6 @@
                     </a>
                 </li>
                 <li><a class="bt-my-feedback"  style="background-color: rgba(202, 208, 183, 0.6);border: 1px solid rgba(114, 121, 88, 1);">Мои отзывы</a></li>
-                <li><a class="bt-my-like">Избранное</a></li>
             </ul>
         </div>
     </div>
@@ -42,6 +41,8 @@
             <h2 class="user-name">{{ user.username }}</h2>
         </div>
         {% endif %}
+
+        <div></div>
 
         <div class="feedbacks">
             {% for feedback in feedbacks %}
@@ -108,6 +109,6 @@
 
 
 
-<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.6.1.min.js"></script>
 <script src="{% static 'js/user.js' %}"></script>
 {% endblock base_content %}
