--- a/ShopFlowers/flowers/templates/main_page.html
+++ b/ShopFlowers/flowers/templates/main_page.html
@@ -11,14 +11,14 @@
 <section class="home">
     <div class="main">
         <div class="catalog">
-            <h1 style="font-family: 'myFontMirra'; font-size: 45pt; font-weight: lighter; color: rgba(40, 49, 6, 1);">Галлерея зеленых пейзажей</h1>
+            <h1 style="font-family: 'myFontMirra'; font-size: 45pt; font-weight: lighter; color: rgba(40, 49, 6, 1);">Галерея зеленых пейзажей</h1>
             <button class="catalog-button"><a href="{% url 'flowers:flowers' %}" class="networks-flowers">Открыть каталог</a></button>
         </div>
 
         <div class="main-carousel">
             <h3 style="font-family: 'myFontMirra'; font-size: 25pt; font-weight: lighter; color: rgba(40, 49, 6, 1); text-align: center;">Хиты продаж</h3>
 
-            <div class="main-courusel-assortment">
+            <div class="main-carousel-assortment">
                 {% for favorite in favorites %}
                     <div class="main-assortment">
                         <a href="{% url 'flowers:flower' slug=favorite.flowers.slug %}">
@@ -40,11 +40,11 @@
             <div class="about-hello">
                 <p>Fresh Company - это больше, чем просто магазин комнатных растений. Мы - команда страстных любителей природы, которые хотят поделиться своей любовью к зелени с вами. Мы верим, что растения способны не только украсить ваш дом, но и создать уютную атмосферу, улучшить настроение и даже повысить продуктивность.</p>
 
-                <img src="{% static 'images/about_one.jpg' %}" width="750px" height="375px">
+                <img src="{% static 'images/about_one.jpg' %}" width="720px" height="350px">
             </div>
 
             <div class="about-our-plus">
-                <img src="{% static 'images/about_three.jpg' %}" width="325px" height="325px">
+                <img src="{% static 'images/about_two.jpg' %}" width="300px" height="300px">
                 <ul class="about-ul">
                     <li>Качество: Мы стремимся предлагать высококачественные растения и услуги.</li>
                     <li>Экологичность: Мы заботимся об окружающей среде и используем экологически чистые материалы и методы.</li>
@@ -59,7 +59,7 @@
                     <li>Индивидуальный подход: Мы с удовольствием подберем растения и поможем вам в уходе за ними.</li>
                 </ul>
 
-                <img src="{% static 'images/about_four.jpg' %}" width="325px" height="325px">
+                <img src="{% static 'images/about_three.jpg' %}" width="300px" height="300px">
             </div>
         </div>
     </div>
