--- a/ShopFlowers/order/templates/profile_order.html
+++ b/ShopFlowers/order/templates/profile_order.html
@@ -19,7 +19,6 @@
                     </a>
                 </li>
                 <li><a href="{% url 'feedback:feedback-profile' %}" class="bt-my-feedback">Мои отзывы</a></li>
-                <li><a class="bt-my-like">Избранное</a></li>
             </ul>
         </div>
     </div>
@@ -207,6 +206,6 @@
 </section>
 
 
-<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.6.1.min.js"></script>
 <script src="{% static 'js/user.js' %}"></script>
 {% endblock base_content %}
