--- a/ShopFlowers/templates/base.html
+++ b/ShopFlowers/templates/base.html
@@ -69,7 +69,7 @@
 
     <section class="basement">
         <div class="logo_basement">
-            <img src="{% static 'images/logo.jpg' %}">
+            <img src="{% static 'images/logo.png' %}">
         </div>
 
         <div class="info">
@@ -83,9 +83,7 @@
 
         <div class="connection">
             <h4>Связаться с нами</h4>
-            <p>О нас</p>
-            <p>По России 8(800)-000-0000</p>
-            <p>По Красноярску 8(999)-000-0000</p>
+            <p>8(999)-000-0000</p>
             <p>Адрес: г. Красноярск, ул. Чайковского 20 пом.205</p>
             <p>Галерея зеленых пейзажей Fresh Company</p>
         </div>
