--- a/ShopFlowers/order/templates/email_cancel_order.html
+++ b/ShopFlowers/order/templates/email_cancel_order.html
@@ -78,7 +78,9 @@
     </table>
     <p>Оплата: <span style="font-weight: bold;">{{ order.payment }}</span></p>
     <p>Общая стоимость заказа: <span style="font-weight: bold;">{{ order.summa }}₽</span></p>
-    <p>Возврат денежных средств будет осуществлен в течение 3 рабочих дней на карту с которой производилась оплата.</p>
+    {% if order.payment == 'Онлайн' %}
+        <p>Возврат денежных средств будет осуществлен в течение 3 рабочих дней на карту с которой производилась оплата.</p>
+    {% endif %}
     <p>Если у вас возникнут вопросы, пожалуйста, свяжитесь с нами по телефону 8(999)-000-0000.</p>
     <p class="end">С уважением команда FreshCompany 🌿</p>
 </div>
