Добавлена страница после оплаты с инфой о успешном заказе, добавлен номер телефона с модель пользователя

--- a/ShopFlowers/feedback/templates/profile_feedback.html
+++ b/ShopFlowers/feedback/templates/profile_feedback.html
@@ -11,7 +11,7 @@
 <section class="popup">
     <div class="menu-profile">
         <div class="menu">
-            <ul>
+            <ul class="profile-ul">
                 <li><a href="{% url 'user:profile' %}" class="bt-my-profile">Настройки</a></li>
                 <li>
                     <a href="{% url 'order:order-profile' %}" class="bt-my-orders">
