--- a/ShopFlowers/order/templates/profile_order.html
+++ b/ShopFlowers/order/templates/profile_order.html
@@ -11,7 +11,7 @@
 <section class="popup">
     <div class="menu-profile">
         <div class="menu">
-            <ul>
+            <ul class="profile-ul">
                 <li><a href="{% url 'user:profile' %}" class="bt-my-profile">Настройки</a></li>
                 <li>
                     <a class="bt-my-orders" style="background-color: rgba(202, 208, 183, 0.6); border: 1px solid rgba(114, 121, 88, 1);">
