--- a/ShopFlowers/flowers/static/css/flowers_style.css
+++ b/ShopFlowers/flowers/static/css/flowers_style.css
@@ -404,4 +404,45 @@ a {
         text-align: center;
         color: rgba(40, 49, 6, 1);
     }
+
+    .filters {
+        position: sticky;
+        top: 0;
+    }
+    
+    .filter-ul>li { 
+        font-size: 10px;
+    }
+    
+    .title-filter {
+        text-align: center;
+        color: rgba(40, 49, 6, 1);
+        font-family: 'myFontMirra';
+    }
+    
+    .filter-btn {
+        margin: 5px 25% 0 25%;
+        width: 50%;
+        border-style: none;
+        background-color: rgba(114, 121, 88, 1);
+        padding: 5px 5px 5px 5px;
+        text-align: center;
+        font-size: 12px;
+        border-radius: 25px;
+        color: rgba(214, 215, 210, 1);
+        cursor: pointer;
+        a {
+            text-decoration: none;
+            color: rgba(214, 215, 210, 1);
+        }
+    }
+    
+    .filter-btn:hover {
+        background-color:  rgba(209, 216, 184, 1);
+        color:  rgba(40, 49, 6, 1);
+        box-shadow: 0 0 30px 5px rgba(40, 49, 6, 0.5);
+        a {
+            color:  rgba(40, 49, 6, 1);
+        }
+    }
 }
