--- a/ShopFlowers/flowers/templates/flowers.html
+++ b/ShopFlowers/flowers/templates/flowers.html
@@ -96,11 +96,11 @@
                 <p class="p-text">{{ flower.title }}</p>
                     {% if flower.is_discount %}
                         <div class="flower-price">
-                            <p class="p-price-discount">от {{ flower.calculate_the_price }}₽</p>
+                            <p class="p-price-discount">{{ flower.calculate_the_price }}₽</p>
                             <p class="p-price">{{ flower.price }}₽</p>
                         </div>
                     {% else %}
-                        <p class="p-text">от {{ flower.calculate_the_price }}₽</p>
+                        <p class="p-text">{{ flower.calculate_the_price }}₽</p>
                     {% endif %}
 
                     {% if flower.quantity > 0 %}
