--- a/ShopFlowers/templates/base.html
+++ b/ShopFlowers/templates/base.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/base_style.css' %}" />
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
 
     {% block head_title %}
 
@@ -16,10 +17,6 @@
     <nav class="nav_main">
         <div class="logo">
             <a href="{% url 'flowers:main' %}"><img src="{% static 'images/logo.png' %}" style="background-size: contain;"></a>
-        </div>
-
-        <div class="networks">
-            <a href="{% url 'flowers:flowers' %}" class="networ-catalog" hidden>Каталог</a>
         </div>
 
         <div class="find">
@@ -74,11 +71,9 @@
 
         <div class="info">
             <h4>Покупателю</h4>
-            <p>Как сделать заказ</p>
             <p>Оплата заказов</p>
             <p>Возврат заказов</p>
             <p>Доставка заказов</p>
-            <p>Пункты самовывоза</p>
         </div>
 
         <div class="connection">
