--- a/ShopFlowers/users/templates/profile.html
+++ b/ShopFlowers/users/templates/profile.html
@@ -11,8 +11,8 @@
 <section class="popup">
     <div class="menu-profile">
         <div class="menu">
-            <ul>
-                <li>
+            <ul class="profile-ul">
+                <li class="profile-li">
                     <a class="bt-my-profile" style="background-color: rgba(202, 208, 183, 0.6);border: 1px solid rgba(114, 121, 88, 1);">
                         Настройки
                     </a>
@@ -47,22 +47,21 @@
         <div class="settings">
             <div class="form-grid">
                 <div class="form-1">
-                    <div class="form-error">{{ form.non_field_errors }}</div>
                     <span class="label-form">{{ form.username.label }}:</span><br><p>{{ form.username }}</p>
                     <span class="label-form">{{ form.email.label }}:</span><br><p>{{ form.email }}</p>
+                    <span class="label-form">{{ form.phone.label }}:</span><br><p>{{ form.phone }}</p>
                     <span class="label-form"><label>Изменить пароль:</label></span><br><br>
                     <a href="{% url 'user:password-change' %}"><button type="button" class="btn-p">********</button></a>
-                    <div class="form-error">{{ form.errors }}</div>
                 </div>
 
                 <div class="form-2">
-                    <div class="form-error">{{ form.non_field_errors }}</div>
                     <span class="label-form">{{ form.first_name.label }}:</span><br><p>{{ form.first_name }}</p>
                     <span class="label-form">{{ form.last_name.label }}:</span><br><p>{{ form.last_name }}</p>
                     <span class="label-form">{{ form.date_birth.label }}:</span><br><p>{{ form.date_birth }}</p>
-                    <div class="form-error">{{ form.errors }}</div>
                 </div>
             </div>
+            <div class="form-error">{{ form.non_field_errors }}</div>
+            <div class="form-error">{{ form.errors }}</div>
             <button class="save-profile" type="submit">Сохранить</button>
         </div>
         </form>
