--- a/ShopFlowers/payment/static/css/payment_style.css
+++ b/ShopFlowers/payment/static/css/payment_style.css
@@ -3,7 +3,7 @@
     src: url('../fonts/Mirra.otf');
 }   
 
-body {
+.body-payment {
     background-image: url(../images/payment.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
