--- a/ShopFlowers/payment/templates/payment.html
+++ b/ShopFlowers/payment/templates/payment.html
@@ -8,14 +8,16 @@
 {% endblock head_title %}
 
 {% block base_content %}
-<div class="payment">
-    <p class="payment-h1">Ваш заказ успешно оформлен.</p>
+<div class="body-payment">
+    <div class="payment">
+        <p class="payment-h1">Ваш заказ успешно оформлен.</p>
 
-    <p class="p">Скоро вы сможете насладиться заказанными товарами, а пока мы будем следить за тем, чтобы он добрался до вас в целости и сохранности.</p> 
-    
-    <p class="p">Следите за статусом доставки по ссылке <a href="{% url 'order:order-profile' %}">Мои покупки</a>.</p> 
-    
-    <p class="p">Остались вопросы? Свяжитесь с нами по номеру 8(999)-000-0000.</p>
-    <a href="{% url 'flowers:main' %}">Вернуться на главную.</a>
+        <p class="p">Скоро вы сможете насладиться заказанными товарами, а пока мы будем следить за тем, чтобы он добрался до вас в целости и сохранности.</p> 
+        
+        <p class="p">Следите за статусом доставки по ссылке <a href="{% url 'order:order-profile' %}">Мои покупки</a>.</p> 
+        
+        <p class="p">Остались вопросы? Свяжитесь с нами по номеру 8(999)-000-0000.</p>
+        <a href="{% url 'flowers:main' %}">Вернуться на главную.</a>
+    </div>
 </div>
 {% endblock base_content %}
