Отредактирован базовый шаблон

--- a/ShopFlowers/flowers/templates/main_page.html
+++ b/ShopFlowers/flowers/templates/main_page.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="main-carousel">
-            <h3 class="main-carousel-h3">Хиты продаж</h3>
+            <h3 class="main-carousel-h3">Нравится покупателям:</h3>
 
             <div class="main-carousel-assortment">
                 {% for favorite in favorites %}
