--- a/ShopFlowers/templates/base.html
+++ b/ShopFlowers/templates/base.html
@@ -81,9 +81,9 @@
 
         <div class="info">
             <h4>Покупателю</h4>
-            <p>Оплата заказов</p>
-            <p>Возврат заказов</p>
-            <p>Доставка заказов</p>
+            <p><a href="{% url 'info' %}" style="text-decoration: none; color: rgba(40, 49, 6, 1);">Оплата заказов</a></p>
+            <p><a href="{% url 'info' %}" style="text-decoration: none; color: rgba(40, 49, 6, 1);">Возврат заказов</a></p>
+            <p><a href="{% url 'info' %}" style="text-decoration: none; color: rgba(40, 49, 6, 1);">Доставка заказов</a></p>
         </div>
 
         <div class="connection">
